adjusting project items styles to prevent overflow scroll bars

--- a/assets/styles/css/styles.css
+++ b/assets/styles/css/styles.css
@@ -164,11 +164,6 @@ body {
   -webkit-text-fill-color: transparent;
 }
 
-.main {
-  width: 90%;
-  margin: 0 auto;
-}
-
 @media screen and (min-width: 900px) {
   .main {
     width: 750px;
@@ -273,8 +268,13 @@ body {
   bottom: -0.7rem;
 }
 
+.projects__gris-item-wrapper {
+  overflow: hidden;
+}
+
 .projects__grid-item {
-  margin-bottom: 3rem;
+  width: 90%;
+  margin: 0 auto 3rem auto;
 }
 
 .projects__grid-item-image {
