--- a/assets/styles/scss/modules/main.scss
+++ b/assets/styles/scss/modules/main.scss
@@ -1,8 +1,3 @@
-.main {
-  width: 90%;
-  margin: 0 auto;
-}
-
 @media screen and (min-width: 900px) {
   .main {
     width: 750px;
